Refactor: introduce AutoMapper to map entity objects into data models.
